--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+# add ignored files 
+Library
+Temp
+*.pidb
+*.sln
+*.unityproj
+*.userprefs
+
